--- a/khidmat-paws-control/package.json
+++ b/khidmat-paws-control/package.json
@@ -14,10 +14,7 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/node": "22.10.5",
-    "@types/react": "19.0.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "5.7.2"
+    "tailwindcss": "^3.4.1"
   }
 }
