--- a/khidmat-paws-control/package.json
+++ b/khidmat-paws-control/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "googleapis": "^144.0.0",
+    "lucide-react": "^0.544.0",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
     "next": "15.1.2",
